<resources>
    <string name="app_name">AndroidLearner</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="fragment">Fragment</string>
    <string name="Intro">Android is a complete set of software for mobile devices such as tablet computers, notebooks, smartphones, electronic book readers, set-top boxes etc.

It contains a linux-based Operating System, middleware and key mobile applications.

It can be thought of as a mobile operating system. But it is not limited to mobile only. It is currently used in various devices such as mobiles, tablets, televisions etc.</string>
    <string name="event">Events are a useful way to collect data about a users interaction with interactive components of Applications. Like button presses or screen touch etc. The Android framework maintains an event queue as first-in, first-out (FIFO) basis. You can capture these events in your program and take appropriate action as per requirements.</string>
    <string name="event2">There are following three concepts related to <b>Android Event Management</b> \n<b>Event Listeners</b> − An event listener is an interface in the View class that contains a single callback method. These methods will be called by the Android framework when the View to which the listener has been registered is triggered by user interaction with the item in the UI.\n<b>Event Listeners Registration</b> − Event Registration is the process by which an Event Handler gets registered with an Event Listener so that the handler is called when the Event Listener fires the event.\n<b>Handlers</b> − When an event happens and we have registered an event listener for the event, the event listener calls the Event Handlers, which is the method that actually handles the event.</string>
    <string name="event3">This is called when the user either clicks or touches or focuses upon any widget like button, text, image etc. You will use onClick() event handler to handle such event.</string>
    <string name="event4">This is called when the user either clicks or touches or focuses upon any widget like button, text, image etc. for one or more seconds. You will use onLongClick() event handler to handle such event.</string>
    <string name="event5">This is called when the widget looses its focus ie. user goes away from the view item. You will use onFocusChange() event handler to handle such event.</string>
    <string name="event6">This is called when the user presses the key, releases the key, or any movement gesture on the screen. You will use onTouch() event handler to handle such event.</string>
    <string name="event7">This is called when the user selects a menu item. You will use onMenuItemClick() event handler to handle such event.</string>
    <string name="event8">This is called when the context menu is being built(as the result of a sustained "long click)</string>
    <string name="adapter1">A bridge between an Adapter View and the underlying data for that view</string>
    <string name="adapter2">Suppose you have thousand contacts on your phone and you want to display that to the user.
\nThere are two options.
\n<b>You can load the thousand contents on your phone at the same time.</b>\n<b>You can load the contents partially on your phone.</b>
\nFirst approach is going to take a lot of resources, obliviously  you are not going to do that.
\nIn the second approach where you can load the data partially, you can do something like load 10 contents on your mobile, 20 on your tablet.
</string>
    <string name="adapter3">But think about how you will know about how many contents you need to display on a particular device.
\nBeside this how will you manage the user index, user will scroll up, down, so much management issues as far as data is concerned.
\nThat’s why android guys have something called <b>Adapter.</b>
\nYou can use adapter which manages the data for you.
</string>
    <string name="adapter4">Adapter takes the data and creates a view out of that data.
    \nAfter creating the view it gives it to something called <b>adapter view.</b>
    \nNow this <b>adapter view</b> displays the data just the way you want.
\nNow remember adapter is only responsible for taking the data or managing the data, adapter view will be responsible for controlling how the data will be displayed.
</string>
    <string name="adapter5">Think about it, you can take the data from an array, from a database and so on.
\nSo there’re different kind of adapters, and then you can display the data vertically in a list, you can display along rows and columns, or you can display that in a drop down menu.
\nSo there are two things, first that manages the data and second is which displays the data.
</string>
    <string name="adapter6">Some views display the view object repeatedly.
\nJust like a list view, it is nothing but list of views, each view inside the list is an object, and have some data in it, such as name of a person.
\nAn adapter view contains set of views, that display data from data source.
\nIt is a kind of design pattern in android.
\nSo finally adapter access the data and creates a view, that is displayed within the Adapter View.
</string>
    <string name="adapter7"><b>List View:</b> It takes the data from list adapter and it displays a vertically scrolling list of view objects, with which user can interact.
        <b>\nGrid View:</b> It displays a Grid of View objects, with which user can interact.
        <b>\nSpinner:</b> It is list of items similar to a drop down menu.
</string>
    <string name="adapter8"><b>Array Adapter:</b> It takes the data from an array, and creates a view out of it.
        <b>\nSimple Cursor Adapter:</b>takes a data from a cursor, here cursor is nothing more than an object in android that represents the data taken from the database.
        <b>\nBase Adapter:</b> It is a custom adapter, which you can define, and customize to how the data should be extracted, how the data should be processed, and how the view should be generated.
</string>
    <string name="list1">Android ListView is a view which groups several items and display them in vertical scrollable list. The list items are automatically inserted to the list using an Adapter that pulls content from a source such as an array or database.</string>
    <string name="list2">When you have large amount of information, view alone is not enough for cover how the data will be displayed.
\nYou also need something called a model, and that’s why you have something called an adapter.
\nAn adapter is a class or you can say series of classes, that are responsible for managing, fetch to data, and how to create simple view out of that data.
\nThen you something called adapter view, it is responsible for how the data should be presented to the user.
</string>
    <string name="list3">You have data source, which can be an array inside your java program or it can be database through your cursor.
\nThis data is fetched by something called list adapter, for each element it fetches, it creates a simple view out of that data, it creates a very simple view like a text view or an image view.
\nNow this list adapter is actually is an interface, there are many sub-classes, that provide the implementations.
        \nFor example, <b>\narray adapter</b>, fetches the data from a string array, <b>\nsimple cursor adapter</b> fetches the data from a database <b>\nbase adapter</b> allows you to customize how to fetch data and how to display that as a view.
\nNow this single view replicated entirely inside your view adapter which is list view in our case.
\nThis is how the list view works in android.</string>
    <string name="list4">There are two ways to implement the list view, one you can  have list view like any other view and second way is you can actually extends a class list view.
\nSo in first we are going to implement list view by using simple activity.</string>
    <string name="list5"><b>Step 5:</b> Now time to actually create an adapter. As you already know list view is made up of two parts, one part is responsible for taking the data from the data source, the second part is actually responsible for displaying the data.
\nIn our case list view is responsible for taking the data, but there is an adapter that are responsible for taking data source values and converting them into a simple view.
\nI have an array data source, so I am going to create an array adapter. An array adapter that will use the data of the type string.</string>
    <string name="list6">There are three parameters, you have to give to an array adapter.
    <b>\nFirst is Context</b> itself, for which you can simple use this keyword.
<b>\nThe second</b> one is for define how a single row should appear inside your list view.
\nHere you can have two option, either you can define your own layout and say that this is the appearance of a single row or you can use predefined layouts android has already provided.
    <b>\nThird parameter</b> is simply the data which is days in our case.</string>
    <string name="frag1">A Fragment is a piece of an activity which enable more modular activity design. It will not be wrong if we say, a fragment is a kind of sub-activity.</string>
    <string name="frag2">We can combine several fragments in single Activity.
\nReuse the same Fragment across several activities, because fragments have their own layout which can be used across the many different activities.
\nOne of many advantages of fragments, is that they make better use of larger screen space on the tablets.
\nFragments support different layouts on portrait and landscape modes.
</string>
    <string name="frag3">Flexible user interfaces across different screen sizes. 
\nFixed / scrolling / Swipe tab display. 
\nDialog boxes, which are purely made of using the fragments as of now. 
\nAll action bar customization with list view and tab modes are possible with fragments.</string>
    <string name="frag4">Basically fragments are divided as three stages as shown below.

    \n<b>Single frame fragments</b> − Single frame fragments are using for hand hold devices like mobiles, here we can show only one fragment as a view.

    \n<b>List fragments</b> − fragments having special list view is called as list fragment

    \n<b>Fragments transaction</b> − Using with fragment transaction. we can move one fragment to another fragment.</string>
    <string name="frag5">Every activity has its own fragment manger.
\nIt maintains references to all the fragments inside the activity.
\nWe can use findFragmentById() or findFragmentByTag() methods to get a reference to a particular fragment inside the activity.</string>
    <string name="frag6">The act of adding, removing, replacing fragments to an activity are considered as transactions inside android and managed by an object called FragmentTransactions.
</string>
</resources>