<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".eventhandling">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <!-- Event Handling -->
    <TextView
        android:textSize="21sp"
        android:id="@+id/event1"
        android:textColor="@color/Heading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Android Event Handling"></TextView>
    <TextView
        android:layout_below="@id/ui1"
        android:textSize="16sp"
        android:id="@+id/event2"
        android:textColor="@color/Text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/event"></TextView>
    <TextView
        android:layout_below="@id/ui2"
        android:textSize="16sp"
        android:id="@+id/event3"
        android:textColor="@color/Text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/event2"></TextView>
    <TextView
        android:textSize="21sp"
        android:id="@+id/event4"
        android:textColor="@color/Heading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Event Listeners &amp; Event Handlers"></TextView>
    <TextView
        android:gravity="start"
        android:background="@color/green"
        android:textSize="20dp"
        android:textColor="@color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="OnClickListener()"></TextView>
    <TextView
        android:textSize="20sp"
        android:id="@+id/event5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/event3"></TextView>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/lightgray"
        android:layout_margin="10dp"/>
    <TextView
        android:gravity="start"
        android:background="@color/green"
        android:textSize="20dp"
        android:textColor="@color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="OnLongClickListener()"></TextView>
    <TextView
        android:textSize="20sp"
        android:id="@+id/event6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/event4"></TextView>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/lightgray"
        android:layout_margin="10dp"/>
    <TextView
        android:gravity="start"
        android:background="@color/green"
        android:textSize="20dp"
        android:textColor="@color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="OnFocusChangeListener()"></TextView>
    <TextView
        android:textSize="20sp"
        android:id="@+id/event7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/event5"></TextView>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/lightgray"
        android:layout_margin="10dp"/>
    <TextView
        android:gravity="start"
        android:background="@color/green"
        android:textSize="20dp"
        android:textColor="@color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="OnTouchListener()"></TextView>
    <TextView
        android:textSize="20sp"
        android:id="@+id/event8"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/event6"></TextView>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/lightgray"
        android:layout_margin="10dp"/>
    <TextView
        android:gravity="start"
        android:background="@color/green"
        android:textSize="20dp"
        android:textColor="@color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="OnMenuItemClickListener()"></TextView>
    <TextView
        android:textSize="20sp"
        android:id="@+id/event9"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/event7"></TextView>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/lightgray"
        android:layout_margin="10dp"/>
    <TextView
        android:gravity="start"
        android:background="@color/green"
        android:textSize="20dp"
        android:textColor="@color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="onCreateContextMenuItemListener()"></TextView>
    <TextView
        android:textSize="20sp"
        android:id="@+id/event10"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/event8"></TextView>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/lightgray"
        android:layout_margin="10dp"/>
</LinearLayout>
</ScrollView>